# surface-ai

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  prompt.md  vcpkg.json
.superpowers/sdd/: task-10-report.md  task-4-report.md
apps/seat-aoi/: CMakeLists.txt  app_builder.cpp  app_builder.h  app_config.h  cli_args.cpp  cli_args.h  coreset_builder.cpp  coreset_builder.h  embedder_factory.h  evolution_offer.h  gui_runner.cpp  gui_runner.h  headless_runner.cpp  headless_runner.h  knowledge_seed.cpp  knowledge_seed.h  main.cpp  qml.qrc  tuning_wiring.cpp  tuning_wiring.h
apps/seat-aoi/resources/: pipeline.yaml
apps/seat-aoi/resources/rules/: seat_leather_defects.yaml
apps/seat-aoi/resources/trees/: seat_leather_inspection.yaml
apps/seat-aoi/resources/tuning/: seat_leather_tuning.yaml
deploy/: surface-ai.service
docs/surface-ai/: glossary-and-contracts.md
resources/models/: MODEL_MANIFEST.yaml
scripts/: generate_car_dataset.py
src/core/: CMakeLists.txt  context.cpp  type_registry.cpp
src/detection/: CMakeLists.txt  bounded_patch_sampler.cpp  candidate_buffer.cpp  coreset_evolution.cpp  coreset_updater.cpp  detection_result.cpp  feature_bank.cpp  feature_bank_cuda.cpp  greedy_coreset_cuda.cu  multi_signal_consensus.cpp  normality_profile.cpp  normality_scorer.cpp  novelty_filter.cpp  patch_core.cpp  pca_detector.cpp  post_process_utils.cpp  specular_filter.cpp
src/device/: CMakeLists.txt  fake_camera.cpp  genicam_camera.cpp  opcua_client.cpp
src/embedding/: CMakeLists.txt  dimension_reducer.cpp  embedding.cpp  embedding_cuda.cpp  feature_cache.cpp  global_embedder.cpp  global_embedder_cuda.cpp  patch_embedder.cpp  patch_embedder_cuda.cpp  pca_fitting.cpp  pca_scoring.cpp  pca_serialization.cpp  simple_patch_embedder.cpp
src/image/: CMakeLists.txt  gpu_image.cpp  gpu_preprocess.cpp  image.cpp  preprocess.cpp  raw_image.cpp  roi.cpp  surface_image.cpp
src/inference/: CMakeLists.txt  clip_adapter.cpp  dino_v3_adapter.cpp  dino_v3_adapter.cu  multi_layer_aggregator.cpp  onnx_engine.cpp  saliency_mask.cpp  sam2_adapter.cpp  sam2_segmenter.cpp  tensorrt_engine.cpp
src/infra/: CMakeLists.txt  config_schema.cpp  config_store.cpp  config_store_inotify.cpp  logger.cpp
src/io/: CMakeLists.txt  alert_sender.cpp  basic_importer.cpp  coreset_manifest.cpp  json_exporter.cpp
src/knowledge/: CMakeLists.txt  knowledge_evolution.cpp  knowledge_graph.cpp  knowledge_record.cpp  knowledge_snapshot.cpp  knowledge_store.cpp
src/memory/: CMakeLists.txt  arena_allocator.cpp  gpu_pool.cpp  pinned_pool.cpp
src/pipeline/: CMakeLists.txt  capture_stage.cpp  detect_stage.cpp  export_stage.cpp  inference_stage.cpp  inspection_recorder.cpp  pipeline.cpp  pipeline_builder.cpp  pipeline_builder.h  preprocess_stage.cpp  reason_stage.cpp  rule_eval_stage.cpp  scheduler.cpp  stage_factory.cpp  stage_factory.h  stage_nodes.h
src/plugin/: CMakeLists.txt  capability_manager.cpp  license_manager.cpp  manifest.cpp  module_manager.cpp  plugin_manager.cpp  version_manager.cpp
src/reasoner/: CMakeLists.txt  decision_tree.cpp  evidence_collector.cpp  reasoner.cpp  score_calculator.cpp  score_calculator.h  trace_recorder.cpp  trace_recorder.h  tree_walker.cpp  tree_walker.h
src/retrieval/: CMakeLists.txt  hybrid_retriever.cpp  metadata_path.cpp  score_fusion.cpp  vector_path.cpp
src/rule/: CMakeLists.txt  condition_builder.cpp  condition_builder.h  conflict_resolver.cpp  conflict_resolver.h  expression.cpp  fact_base.cpp  fact_builder.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  rule_engine.cpp  value.cpp
src/runtime/: CMakeLists.txt  gpu_stream_queue.cpp  pipeline_executor.cpp  task_graph.cpp  task_scheduler.cpp  worker_pool.cpp
src/scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.h
src/tuning/: CMakeLists.txt  bayesian_optimizer.cpp  tuning_objective.cpp  tuning_scheduler.cpp  tuning_space.cpp
src/visualization/: CMakeLists.txt  config_viewmodel.cpp  dashboard_viewmodel.cpp  frame_provider.cpp  inspection_viewmodel.cpp  pipeline_viewmodel.cpp  placeholder.cpp
src/visualization/qml/: ConfigScreen.qml  DashboardScreen.qml  HistoryScreen.qml  MainWindow.qml  MonitorScreen.qml
src/visualization/qml/components/: DefectOverlay.qml  StageMetricsBar.qml  TrendChart.qml  VerdictBadge.qml
src/web/: CMakeLists.txt  http_server.cpp
tests/core/: CMakeLists.txt  context_lifecycle_test.cpp  object_resource_test.cpp  registry_factory_test.cpp  registry_test.cpp  smoke_test.cpp  type_registry_test.cpp
tests/detection/: CMakeLists.txt  bounded_patch_sampler_test.cpp  coreset_evolution_test.cpp  detection_types_test.cpp  feature_bank_test.cpp  patch_core_test.cpp  pca_detector_test.cpp
tests/device/: CMakeLists.txt  device_interface_test.cpp  fake_camera.cpp  fake_camera.h  fake_light_controller.cpp  fake_light_controller.h  ring_buffer_test.cpp
tests/embedding/: CMakeLists.txt  dimension_reducer_test.cpp  embedder_test.cpp  embedding_test.cpp  feature_cache_test.cpp  pca_scoring_test.cpp
tests/image/: CMakeLists.txt  image_types_test.cpp  preprocess_test.cpp  roi_test.cpp
tests/inference/: CMakeLists.txt  mock_engine.cpp  mock_engine_test.cpp
tests/infra/: CMakeLists.txt  config_store_test.cpp  daily_and_size_sink_test.cpp  logger_dropped_count_test.cpp  logger_test.cpp
tests/integration/: CMakeLists.txt  acquisition_to_export_test.cpp  coreset_evolution_integration_test.cpp  end_to_end_regression_test.cpp  inference_pipeline_test.cpp  knowledge_retrieval_pipeline_test.cpp  m6_e2e_pipeline_test.cpp  rule_reasoner_pipeline_test.cpp  tuning_integration_test.cpp
tests/io/: CMakeLists.txt  basic_importer_test.cpp  json_exporter_test.cpp
tests/knowledge/: CMakeLists.txt  knowledge_evolution_test.cpp  knowledge_graph_test.cpp  knowledge_snapshot_test.cpp  knowledge_store_test.cpp
tests/memory/: CMakeLists.txt  arena_allocator_test.cpp  host_test_pool.cpp  host_test_pool.h  host_test_pool_concurrency_test.cpp  pooled_ptr_test.cpp
tools/: export_clip.py  export_dino_v3.py  export_sam2.py
(+201 files in other folders)
